<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart Door</string>
    <string name="hello_world">Hello world!</string>
    <string name="goto_twitter">Go to the Twitter feed</string>
    <string name="title_activity_twitter">TwitterActivity</string>
    <string name="placeholder">example</string>
    <string name="UserImage">User\'s Profile Image</string>
    <string name="Refresh">Refresh</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string-array name="mainMenuOptions">
        <item>About</item>
        <item>Exit</item>
    </string-array>
    
    <string-array name="manualLoginMenuOptions">
        <item>Switch Login</item>
        <item>User options</item>
    </string-array>
    
    <!--Twitter defaults-->
    <string name="twitter_Key">ooNTrnLHJL6q2s5Ewbejs1NT9</string>
    <string name="twitter_Secret">mADXV5REbV5kdI8eoo4cStLuUEBG65Vc1kHNzkLYmrvVgd2j8z</string>
    <string name="twitter_TokenKey">2595989491-aP0O2BMIiETnXqKxEweZ4cdwFb0kO88rnuwPzNB</string>
    <string name="twitter_TokenSecret">LfxgqxQwaBiNYYtmNcSsMysqhJE4IE4TJomV9hkoe5gzj</string>
    
    <!--Server defaults-->
    <string name="server_IP">10.0.0.101</string>
    <string name="server_Port">2653</string>
    
    <string-array name="commandOptions">
        <item>Open door</item>
        <item>Add user</item>
        <item>Manage user</item>
        <item>Settings</item>
        <item>Logout</item>
    </string-array>
    
    <string-array name="basicCommandOptions">
        <item>Open door</item>
        <item>Logout</item>
    </string-array>
    
    <!-- Settings Help Strings-->
    <string name="Help_voiceCalibration">Records sound for a set period of time and then calculates the average volume for that period. The mic\'s auto start threshold is then set accordingly. A lower value means less sound is needed for the mic to start recording. </string>
    
    <string name="Help_serverIPAddress">The IP address of the server that will handle the "Open Door" command</string>
    <string name="Help_serverIPort">The Port that the server listening on for commands</string>
    
	<string name="Help_faceAlgorithm">The type of algorithm to use for face recognition. Eigenfaces is very sensitive to lighting conditions. Fisherfaces is less sensitive to lighting conditions but requires at least 8 or more photos do be accurate. Local Binary Patterns Histograms is the most accurate on a small number of images and is the default algorithm to use.</string>
    <string name="Help_facePhotoNumTrain">Number of photos that will be automatically taken per person and will be trained on. More photos will increase accuracy of recognition, less photos will be faster.</string>
    <string name="Help_facePhotoNumRecog">Number of photos in a row which should be the same person for the system to authenticate the user. This is to prevent nose data. Higher value will be more accurate, lower value will be faster.</string>
    <string name="Help_faceThreshold">Threshold value for the facial recognition algorithm. A higher value will make the threshold less strict and allow more people in. Too low value will lock everyone out. This value is also dependent on the resolution of the camera.</string>
    <string name="Help_faceImageScale">The amount to scale the resolution of the image down for face, nose and eyes detection. Higher value will increase speed but lower accuracy.</string>
    <string name="Help_faceResolution">List of all the possible resolutions supported by the front facing camera. A higher value will have higher accuracy and larger file size of images stored. A lower value will improve performance.</string>
    <string name="Help_faceGroupRectangle">The threshold used for the group rectangle algorithm. A higher value will group more rectangles. A value of 0 will group no rectangles.</string>
    <string name="Help_faceDetectEyes">Disables or Enables eye detection. When enabled a user will only be added when 2 eyes are detected.</string>
    <string name="Help_faceDetectNose">Disables or Enables nose detection. When enabled a user will only be added when 1 nose is detected.</string>
    
    <string name="Help_twitterKey">The Consumer Key that can be retrieved from dev.twitter once you set up the application</string>
    <string name="Help_twitterSecret">The Consumer Secret that can be retrieved from dev.twitter once you set up the application</string>
    <string name="Help_twitterTokenKey">The Access Token that can be retrieved from dev.twitter once you set up the application</string>
    <string name="Help_twitterTokenString">The Access Token Secret that can be retrieved from dev.twitter once you set up the application</string>
    
    <string name="settingsFileName">SmartDoor_settings</string>
    
    <!--defaultFaceSettings-->
    <string name="face_TrainPhotoNum">5</string>
    <string name="face_RecogPhotoNum">5</string>
    <string name="face_recognizerThreshold">200</string>
    <string name="face_ImageScale">2</string>
    <string name="face_faceRecognizerAlgorithm">1</string>
    <string name="face_detectEyes">true</string>
    <string name="face_detectNose">true</string>
    <string name="face_resolution">0</string><!-- index of list with resolutions -->
    <string name="face_GroupRectangleThreshold">0.2</string>
    <!--  -->
     <string-array name="ImageScaleOptions">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    
     <string-array name="NumPhotos">
         <item>1</item>
         <item>3</item>
         <item>5</item>
         <item>7</item>
         <item>10</item>
     </string-array>
    
      <string-array name="faceAlgorithmOptions">
        <item>LBPFace</item>
        <item>FisherFace</item>
        <item>EigenFace</item>
    </string-array>
    
      <string name="face_FaceColor">-65536</string> <!--Red-->
      <string name="face_EyesColor">-16711936</string> <!-- Green -->
        <string name="face_NoseColor">-16776961</string> <!--Blue-->

    <string name="SpeechToText">Speech to Text</string>
    <string name="title_activity_speech_to_text">SpeechToTextActivity</string>
    <string name="title_activity_voice_identification">VoiceIdentificationActivity</string>

    <!-- Manual Login Activity -->
    <string name="ManualLogin_heading">Classic Login</string>
    <string name="ManualLogin_tv1">Username:</string>
    <string name="ManualLogin_tv2">Password:</string>
    <string name="ManualLogin_b1">Login</string>

    <!-- Add_user_one fragement -->
    <string name="add_user_one_firstname">"Enter first names:"</string>
    <string name="add_user_one_surname">"Enter surname:"</string>
    <string name="add_user_one_username">"Enter username"</string>
    <string name="add_user_one_passOne">"Enter password"</string>
    <string name="add_user_one_passTwo">"Re-enter password:"</string>
    <string name="add_user_done">Done</string>

    <!-- Face Detection stuff -->
    <string name="BLANK"></string>
    <string name="STrain">Train</string>
    <string name="SViewAll">View all faces</string>
    <string name="SSearch">Search</string>
    <string name="SDelete">Delete</string>
    <string name="SEnter">Enter face name, then pres Rec</string>
    <string name="SStopTrain">Stop Training</string>
    <string name="SStopSearch">Stop Search</string>
    <string name="Straininig">Training</string>
    <string name="SCanntoPredic">More then one face is needed to predict</string>
    <string name="SIdle">Idle</string>
    <string name="SFaceName">Face name:</string>
    <string name="SSearching">Searching</string>
    <string name="SFrontCamera">Front Camera</string>
    <string name="SBackCamera">Back Camera</string>
    <string name="title_activity_voice_auth">VoiceAuth</string>

</resources>
