<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
	<FrameLayout 
	    android:id="@+id/FrameLayout1"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:background="@drawable/background" >
	
	     <RelativeLayout
		        android:layout_width="match_parent"
		        android:layout_height="match_parent" >
		        
		    <LinearLayout
		        android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_centerInParent="true"
		            android:background="@drawable/manual_login_semi_background"
		            android:orientation="vertical"
		            android:padding="25dp" >
		
		        <TextView
		            android:id="@+id/addUser_fname_tv"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/add_user_one_firstname"
		            android:textSize="25sp"
		            android:textColor="#FFF" />
		
		        <EditText
		            android:id="@+id/addUser_fname_et"
		            android:layout_width="517dp"
		            android:layout_height="wrap_content"
		            android:ems="10"
		            android:inputType="textPersonName"
		            android:textSize="25sp"
		            android:hint="first name"
		            android:textColor="#FFF"/>
		
		        <TextView
		            android:id="@+id/addUser_sname_tv"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/add_user_one_surname"
		            android:textSize="25sp"
		            android:textColor="#FFF" />
		
		        <EditText
		            android:id="@+id/addUser_sname_et"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:ems="10"
		            android:inputType="textPersonName"
		            android:textSize="25sp"
		            android:hint="surname"
		            android:textColor="#FFF" />
		
		        <TextView
		            android:id="@+id/addUser_uname_tv"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/add_user_one_username"
		            android:textSize="25sp"
		            android:textColor="#FFF" />
		
		        <EditText
		            android:id="@+id/addUser_uname_et"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:ems="10"
		            android:textSize="25sp"
		            android:inputType="text"
		            android:hint="username"
		            android:textColor="#FFF" />
		
		        <TextView
		            android:id="@+id/addUser_pass1_tv"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/add_user_one_passOne"
		            android:textSize="25sp"
		            android:textColor="#FFF" />
		
		        <EditText
		            android:id="@+id/addUser_pass1_et"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:ems="10"
		            android:inputType="textPassword"
		            android:textSize="25sp" 
		            android:hint="password"
		            android:textColor="#FFF"/>
		
		        <TextView
		            android:id="@+id/addUser_pass2_tv"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/add_user_one_passTwo"
		            android:textColor="#FFF"
		            android:textSize="25sp" />
		
		        <EditText
		            android:id="@+id/addUser_pass2_et"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:ems="10"
		            android:inputType="textPassword"
		            android:textSize="25sp"
		            android:hint="retype password"
		            android:textColor="#FFF" />
		        
		        <CheckBox
			        android:id="@+id/giveAdminRights"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="Give Admin Rights" />
		        
		         <Button
		             android:id="@+id/stepOneDoneButton"
		             android:layout_width="match_parent"
		             android:layout_height="wrap_content"
		             android:layout_marginTop="5dp"
		             android:background="@drawable/button1"
		             android:onClick="doneStepOneAddUser"
		             android:text="@string/add_user_done"
		             android:textSize="25sp" />
		       
		    </LinearLayout>
		</RelativeLayout>
	</FrameLayout>
</ScrollView>
